--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="log_out">Log out</string>
     <string name="authentication">Authentication</string>
+    <string name="no_results">No results</string>
 </resources>
