--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -47,4 +47,5 @@
     <string name="title_activity_secure_compose">Secure Compose</string>
     <string name="title_activity_login">Sign in</string>
     <string name="please_wait_while_message_will_be_sent">Please wait while a message will be sent!</string>
+    <string name="title_activity_security_reply">Secure Reply</string>
 </resources>
