--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -29,6 +29,7 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="log_out">Log out</string>
     <string name="authentication">Authentication</string>
+    <string name="all_labels">All labels</string>
     <string name="no_results">No results</string>
     <string name="set_up_flow_crypt">Set up FlowCrypt</string>
     <string name="found_backup_of_your_account_key">Found backup of your account key</string>
