--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="text_must_not_be_empty">Error! \"%1$s\" must not be empty!</string>
     <string name="send">Send</string>
     <string name="error_email_is_not_valid">Error, an email is not valid!</string>
+    <string name="error_some_email_is_not_valid">Error, an email \"%1$s\" is not valid!</string>
     <string name="internet_connection_is_not_available">Internet connection is not available!</string>
     <string name="unknown_error">Unknown error!</string>
     <string name="error_have_not_public_key">Sorry, you have not any public key registered!</string>
