--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -50,4 +50,5 @@
     <string name="title_activity_login">Sign in</string>
     <string name="please_wait_while_message_will_be_sent">Please wait while a message will be sent!</string>
     <string name="title_activity_security_reply">Secure Reply</string>
+    <string name="please_wait_while_information_about_contacts_will_be_updated">Please, wait while an information about contacts will be updated!</string>
 </resources>
