--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -58,4 +58,11 @@
     <string name="do_request">Do request</string>
     <string name="read_sdcard_permission_explanation_text">We need a read access to the sd card to import private keys</string>
     <string name="select_key_or_keys">Select a key(s) which will be imported</string>
+    <string name="title_activity_settings">Settings</string>
+    <string name="backup">Backup</string>
+    <string name="contacts">Contacts</string>
+    <string name="keys">Keys</string>
+    <string name="servers">Servers</string>
+    <string name="legal">Legal</string>
+    <string name="help">Help</string>
 </resources>
