--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -68,4 +68,5 @@
     <string name="licence">Licence</string>
     <string name="sources">Sources</string>
     <string name="the_contact_was_deleted">The contact \"%1$s\" was deleted!</string>
+    <string name="the_key_already_added">Key already added, skipping</string>
 </resources>
