--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -89,4 +89,6 @@
     <string name="your_key_backup">Your %1$s Backup</string>
     <string name="backup_was_sent_successfully">The backup was successfully sent!</string>
     <string name="backup_was_not_sent">The backup was not sent!</string>
+    <string name="message_was_deleted">The message was deleted</string>
+    <string name="please_wait_while_action_will_be_completed">Please wait while an action will be completed</string>
 </resources>
