Fixed the ''no connection' issue. | #31.

--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -96,4 +96,7 @@
     <string name="message_was_deleted">The message was deleted</string>
     <string name="please_wait_while_action_will_be_completed">Please wait while an action will be completed</string>
     <string name="message_was_archived">The message was archived</string>
+    <string name="retry">Retry</string>
+    <string name="warning">Warning</string>
+    <string name="no_connection">No connection</string>
 </resources>
