--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -29,7 +29,7 @@
     <string name="crypt">crypt</string>
     <string name="connect_your_email_account_to_start_sending_encrypted_messages">Connect your email account\n to start sending encrypted messages</string>
     <string name="continue_with_gmail">Continue with Gmail</string>
-    <string name="title_activity_email_manager">Inbox</string>
+    <string name="loading">Loading…</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="log_out">Log out</string>
@@ -99,4 +99,6 @@
     <string name="retry">Retry</string>
     <string name="warning">Warning</string>
     <string name="no_connection">No connection</string>
+    <string name="archive">Archive</string>
+    <string name="delete">Delete</string>
 </resources>
