--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -103,4 +103,6 @@
     <string name="delete">Delete</string>
     <string name="error_occurred_while_deleting_message">An error occurred while deleting the message</string>
     <string name="error_occurred_while_archiving_message">An error occurred while archiving the message</string>
+    <string name="error_occurred_while_sending_message">An error occurred while sending the message</string>
+    <string name="sending_message_must_not_be_empty">The sending message must not be empty</string>
 </resources>
