--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -105,4 +105,5 @@
     <string name="error_occurred_while_archiving_message">An error occurred while archiving the message</string>
     <string name="error_occurred_while_sending_message">An error occurred while sending the message</string>
     <string name="sending_message_must_not_be_empty">The sending message must not be empty</string>
+    <string name="there_was_syncing_problem">There was a syncing problem</string>
 </resources>
