--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -107,4 +107,5 @@
     <string name="sending_message_must_not_be_empty">The sending message must not be empty</string>
     <string name="there_was_syncing_problem">There was a syncing problem</string>
     <string name="info_about_some_contacts_not_received">An information about some contacts not received from the server</string>
+    <string name="error_occurred_while_this_action_running">The error occurred while this action running.</string>
 </resources>
