--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -108,4 +108,5 @@
     <string name="there_was_syncing_problem">There was a syncing problem</string>
     <string name="info_about_some_contacts_not_received">An information about some contacts not received from the server</string>
     <string name="error_occurred_while_this_action_running">The error occurred while this action running.</string>
+    <string name="error_occurred_while_receiving_private_keys">An error occurred while receiving the private keys from Gmail</string>
 </resources>
