--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -111,4 +111,5 @@
     <string name="error_occurred_while_receiving_private_keys">An error occurred while receiving the private keys from Gmail</string>
     <string name="no_subject">(no subject)</string>
     <string name="error_occurred_please_try_again">An error occurred. Please try again.</string>
+    <string name="user_photo">The user photo</string>
 </resources>
