--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -11,18 +11,18 @@
     <string name="prompt_recipient">Add recipient</string>
     <string name="prompt_subject">Subject</string>
     <string name="prompt_compose_security_email">Compose secure message</string>
-    <string name="text_must_not_be_empty">Error! \"%1$s\" must not be empty!</string>
+    <string name="text_must_not_be_empty">Error: \"%1$s\" must not be empty!</string>
     <string name="send">Send</string>
-    <string name="error_email_is_not_valid">Error, an email is not valid!</string>
-    <string name="error_some_email_is_not_valid">Error, an email \"%1$s\" is not valid!</string>
-    <string name="internet_connection_is_not_available">Internet connection is not available!</string>
-    <string name="unknown_error">Unknown error!</string>
-    <string name="message_was_sent">Your message was sent!</string>
+    <string name="error_email_is_not_valid">Error: invalid email</string>
+    <string name="error_some_email_is_not_valid">Error: invalid email \"%1$s\"</string>
+    <string name="internet_connection_is_not_available">Error: no internet</string>
+    <string name="unknown_error">Unknown error</string>
+    <string name="message_was_sent">Your message was sent.</string>
     <string name="application_crashed">Application has crashed. You can send a report to the developer.</string>
     <string name="title_activity_splash">SplashActivity</string>
     <string name="action_settings">Settings</string>
     <string name="signed_in_fmt">We received access for %1$s</string>
-    <string name="access_denied">Access denied!</string>
+    <string name="access_denied">Access denied.</string>
     <string name="privacy">Privacy</string>
     <string name="terms">Terms</string>
     <string name="security">Security</string>
@@ -43,26 +43,26 @@
     <string name="loading_account">Loading account</string>
     <string name="no_backups_found">No backups found on this account</string>
     <string name="refresh">Refresh</string>
-    <string name="passphrase_must_be_non_empty">Passphrase must be non-empty!</string>
-    <string name="your_message_must_be_non_empty">Your message must be non-empty!</string>
-    <string name="password_is_incorrect">Password is incorrect, try again!</string>
+    <string name="passphrase_must_be_non_empty">Passphrase must be non-empty.</string>
+    <string name="your_message_must_be_non_empty">Message should not be empty.</string>
+    <string name="password_is_incorrect">Incorrect pass phrase, please try again.</string>
     <string name="use_another_account">Use another account</string>
     <string name="reply_all">Reply all</string>
     <string name="lock">Lock</string>
-    <string name="something_wrong_with_receiving_message">Something wrong with receiving a message!</string>
+    <string name="something_wrong_with_receiving_message">Error: could not receive message</string>
     <string name="title_activity_test">TestActivity</string>
     <string name="title_activity_secure_compose">Secure Compose</string>
     <string name="title_activity_login">Sign in</string>
-    <string name="please_wait_while_message_will_be_sent">Please wait while a message will be sent!</string>
+    <string name="please_wait_while_message_will_be_sent">Sending message, please wait.</string>
     <string name="title_activity_security_reply">Secure Reply</string>
-    <string name="please_wait_while_information_about_contacts_will_be_updated">Please, wait while an information about contacts will be updated!</string>
+    <string name="please_wait_while_information_about_contacts_will_be_updated">Loading information about contacts, please wait.</string>
     <string name="create_a_new_key">Create a new key</string>
     <string name="import_my_key">Import my key</string>
-    <string name="access_to_read_the_sdcard_id_denied">The access to read the sd card is denied!</string>
+    <string name="access_to_read_the_sdcard_id_denied">Error: SD card read access denied</string>
     <string name="change">Change</string>
     <string name="do_request">Do request</string>
-    <string name="read_sdcard_permission_explanation_text">We need a read access to the sd card to import private keys</string>
-    <string name="select_key_or_keys">Select a key(s) which will be imported</string>
+    <string name="read_sdcard_permission_explanation_text">SD card read access needed to import private keys</string>
+    <string name="select_key_or_keys">Select key(s) to import</string>
     <string name="title_activity_settings">Settings</string>
     <string name="backup">Backup</string>
     <string name="contacts">Contacts</string>
@@ -72,10 +72,10 @@
     <string name="help">Help</string>
     <string name="licence">Licence</string>
     <string name="sources">Sources</string>
-    <string name="the_contact_was_deleted">The contact \"%1$s\" was deleted!</string>
+    <string name="the_contact_was_deleted">Contact \"%1$s\" deleted</string>
     <string name="the_key_already_added">Key already added, skipping</string>
     <string name="help_feedback_or_question">Help, feedback or question</string>
-    <string name="i_will_usually_reply_within_an_hour_except_when_i_sleep_tom">I will usually reply within an hour. Except when I sleep. (Tom)</string>
+    <string name="i_will_usually_reply_within_an_hour_except_when_i_sleep_tom">I usually reply within an hour. Except when I sleep. (Tom)</string>
     <string name="your_message">Your message</string>
     <string name="back">Back</string>
     <string name="you_already_sent_this_message">You already sent this message</string>
@@ -86,56 +86,56 @@
     <string name="download">Download</string>
     <string name="backup_as_a_file">backup as a file</string>
     <string name="backup_as_email">backup as email</string>
-    <string name="backup_as_download_hint">This will download your key as a file. Very secure option if your device is encrypted, or if you can keep a file stored securely. If you lose both your phone and the file, your encrypted email will be unreadable, so you need to keep this file in a safe place. Regular emails will not be affected.</string>
-    <string name="backup_as_email_hint">This will back up private key in your Gmail Inbox. The security depends on the strength of your pass phrase, which should be very long and hard to guess. Best option for most users.</string>
-    <string name="backups_found_message">Backups found: %1$d.\n\n Your account is backed up correctly in your email inbox.</string>
-    <string name="key_successfully_saved">The private key successfully saved</string>
+    <string name="backup_as_download_hint">This will download your key as a file. Very secure option if your device is encrypted, or if you can keep a file stored securely. If you lose both your phone and the file, your encrypted email will be unreadable, so you need to keep this file in a safe place.</string>
+    <string name="backup_as_email_hint">This will back up private key in your Email Inbox. The security depends on the strength of your pass phrase, which should be very long and hard to guess. Best option for most users.</string>
+    <string name="backups_found_message">Backups found: %1$d.\n\n Your account is backed up correctly in your Email Inbox.</string>
+    <string name="key_successfully_saved">Key successfully saved</string>
     <string name="your_key_backup">Your %1$s Backup</string>
-    <string name="backup_was_sent_successfully">The backup was successfully sent!</string>
-    <string name="backup_was_not_sent">The backup was not sent!</string>
+    <string name="backup_was_sent_successfully">Backed up successfully.</string>
+    <string name="backup_was_not_sent">Error backing up, please try again.</string>
     <string name="message_was_deleted">The message was deleted</string>
-    <string name="please_wait_while_action_will_be_completed">Please wait while an action will be completed</string>
-    <string name="message_was_archived">The message was archived</string>
+    <string name="please_wait_while_action_will_be_completed">Still working, please wait.</string>
+    <string name="message_was_archived">Message archived</string>
     <string name="retry">Retry</string>
     <string name="warning">Warning</string>
     <string name="no_connection">No connection</string>
     <string name="archive">Archive</string>
     <string name="delete">Delete</string>
-    <string name="error_occurred_while_deleting_message">An error occurred while deleting the message</string>
-    <string name="error_occurred_while_archiving_message">An error occurred while archiving the message</string>
-    <string name="error_occurred_while_sending_message">An error occurred while sending the message</string>
-    <string name="sending_message_must_not_be_empty">The sending message must not be empty</string>
+    <string name="error_occurred_while_deleting_message">Error occurred while deleting the message</string>
+    <string name="error_occurred_while_archiving_message">Error occurred while archiving the message</string>
+    <string name="error_occurred_while_sending_message">Error occurred while sending the message</string>
+    <string name="sending_message_must_not_be_empty">Message should not be empty</string>
     <string name="there_was_syncing_problem">There was a syncing problem</string>
-    <string name="info_about_some_contacts_not_received">An information about some contacts not received from the server</string>
-    <string name="error_occurred_while_this_action_running">The error occurred while this action running.</string>
-    <string name="error_occurred_while_receiving_private_keys">An error occurred while receiving the private keys from Gmail</string>
+    <string name="info_about_some_contacts_not_received">Could not get information about some contacts</string>
+    <string name="error_occurred_while_this_action_running">Error: could not complete action</string>
+    <string name="error_occurred_while_receiving_private_keys">Could not retrieve your private key</string>
     <string name="no_subject">(no subject)</string>
-    <string name="error_occurred_please_try_again">An error occurred. Please try again.</string>
+    <string name="error_occurred_please_try_again">Error occurred. Please try again.</string>
     <string name="user_photo">The user photo</string>
-    <string name="template_message_part_public_key_owner">This message includes a Public Key for %1$s</string>
+    <string name="template_message_part_public_key_owner">Public Key for %1$s</string>
     <string name="template_message_part_public_key_key_words" formatted="false"><![CDATA[KeyWords: <font color=\'#088447\'>%1$s</font>]]></string>
     <string name="template_message_part_public_key_fingerprint" formatted="false"><![CDATA[(Fingerprint: <font color=\'#B7B7B7\'>%1$s</font>)]]></string>
     <string name="show_the_public_key">Show the Public Key</string>
     <string name="hide_the_public_key">Hide the Public Key</string>
     <string name="save_contact">Save contact</string>
     <string name="update_contact">Update contact</string>
-    <string name="contact_successfully_saved">The contact successfully saved!</string>
-    <string name="error_occurred_while_saving_contact">An error occurred while saving the contact.</string>
-    <string name="contact_successfully_updated">The contact successfully updated!</string>
-    <string name="error_occurred_while_updating_contact">An error occurred while updating the contact.</string>
+    <string name="contact_successfully_saved">Contact saved</string>
+    <string name="error_occurred_while_saving_contact">Error occurred while saving the contact</string>
+    <string name="contact_successfully_updated">Contact updated</string>
+    <string name="error_occurred_while_updating_contact">Error occurred while updating the contact</string>
     <string name="import_private_key">Import Private Key</string>
     <string name="load_from_a_file">Load from a file</string>
     <string name="load_from_clipboard">Load from clipboard</string>
     <string name="choose_another_key">Choose another key</string>
     <string name="continue_">Continue</string>
-    <string name="template_check_key_name">Private Key: [%1$s]</string>
-    <string name="can_not_read_this_private_key">Can not read this private key</string>
+    <string name="template_check_key_name">[%1$s]</string>
+    <string name="can_not_read_this_private_key">Cannot read this private key</string>
     <string name="info">Info</string>
     <string name="hint">Hint</string>
     <string name="hint_clipboard_is_empty">Your clipboard is empty. Please find your private key where you are storing it, select the text and copy it. After that, return back to %1$s.</string>
     <string name="clipboard_has_wrong_structure">The content of your clipboard does not look like a valid PGP Private Key.</string>
     <string name="file_has_wrong_pgp_structure">The content of your file does not look like a valid PGP Private Key.</string>
-    <string name="loaded_private_key_from_your_clipboard">Loaded a private key from your clipboard</string>
-    <string name="checking_the_private_key">Checking the private key…</string>
-    <string name="key_successfully_imported">The key successfully imported</string>
+    <string name="loaded_private_key_from_your_clipboard">Loaded private key from your clipboard</string>
+    <string name="checking_the_private_key">Evaluating…</string>
+    <string name="key_successfully_imported">Key successfully imported</string>
 </resources>
