Added show is a message has attachments when display the emails list. | #55.

--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -153,4 +153,5 @@
     <string name="private_">Private</string>
     <string name="public_">Public</string>
     <string name="message_was_moved_to_inbox">The message was moved to inbox</string>
+    <string name="attachment">Attachment</string>
 </resources>
