--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -28,7 +28,7 @@
     <string name="terms">Terms</string>
     <string name="security">Security</string>
     <string name="crypt">crypt</string>
-    <string name="connect_your_email_account_to_start_sending_encrypted_messages">Connect your email account\n to start sending encrypted messages</string>
+    <string name="connect_your_email_account_to_start_sending_encrypted_messages">Connect your email account\n to send encrypted messages</string>
     <string name="continue_with_gmail">Continue with Gmail</string>
     <string name="loading">Loading…</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
