--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -57,10 +57,10 @@
     <string name="please_wait_while_information_about_contacts_will_be_updated">Loading information about contacts, please wait.</string>
     <string name="create_a_new_key">Create a new key</string>
     <string name="import_my_key">Import my key</string>
-    <string name="access_to_read_the_sdcard_id_denied">Error: SD card read access denied</string>
+    <string name="access_to_read_the_sdcard_id_denied">File access denied</string>
     <string name="change">Change</string>
-    <string name="do_request">Do request</string>
-    <string name="read_sdcard_permission_explanation_text">SD card read access needed to import keys</string>
+    <string name="do_request">Allow</string>
+    <string name="read_sdcard_permission_explanation_text">File access needed to import keys</string>
     <string name="select_key_to_import">Select a key to import</string>
     <string name="title_activity_settings">Settings</string>
     <string name="backup">Backup</string>
