--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -7,11 +7,11 @@
 <resources>
     <string name="app_name">FlowCrypt</string>
 
-    <string name="secure_compose">Secure Compose</string>
     <string name="compose">Compose</string>
     <string name="prompt_recipient">Add recipient</string>
     <string name="prompt_subject">Subject</string>
     <string name="prompt_compose_security_email">Compose secure message</string>
+    <string name="prompt_compose_standard_email">Compose standard message</string>
     <string name="text_must_not_be_empty">Error: \"%1$s\" must not be empty!</string>
     <string name="send">Send</string>
     <string name="error_email_is_not_valid">Error: invalid email</string>
