--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -154,4 +154,6 @@
     <string name="public_">Public</string>
     <string name="message_was_moved_to_inbox">The message was moved to inbox</string>
     <string name="attachment">Attachment</string>
+    <string name="can_not_connect_to_the_imap_server">Can not connect to the IMAP server</string>
+    <string name="failed_load_message_from_email_server">Failed to load a message from the email server</string>
 </resources>
