--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -155,4 +155,7 @@
     <string name="attachment">Attachment</string>
     <string name="can_not_connect_to_the_imap_server">Can not connect to the IMAP server</string>
     <string name="failed_load_message_from_email_server">Failed to load a message from the email server</string>
+    <string name="cancel">Cancel</string>
+    <string name="waiting_to_load">Waiting to load</string>
+    <string name="download_complete">Download complete.</string>
 </resources>
