Added checking the write external storage permission when try to download attachment. | #82.

--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -159,4 +159,6 @@
     <string name="waiting_to_load">Waiting to load</string>
     <string name="download_complete">Download complete.</string>
     <string name="template_attachment_already_loading">Attachment \"%1$s\" already loading </string>
+    <string name="cannot_save_attachment_without_permission">The attachment cannot be saved without the write external
+        storage permission</string>
 </resources>
