--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -164,6 +164,6 @@
         storage permission</string>
     <string name="choose_attachment">Choose an attachment</string>
     <string name="can_not_attach_this_file">Can\'t attach this file!</string>
-    <string name="warning_max_total_attachments_size">Warning! Total size of added attachments should be under
-        5MB</string>
+    <string name="template_warning_max_total_attachments_size">Warning! Total size of added attachments should be under
+        %1$s</string>
 </resources>
