--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -166,4 +166,5 @@
     <string name="can_not_attach_this_file">Can\'t attach this file!</string>
     <string name="template_warning_max_total_attachments_size">Warning! Total size of added attachments should be under
         %1$s</string>
+    <string name="template_reply_subject">Re: %1$s</string>
 </resources>
