--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -184,4 +184,6 @@
     <string name="smtp_sign_in_password">SMTP sign-in password</string>
     <string name="try_to_connect">Try to connect</string>
     <string name="adding_new_account">Adding a new account</string>
+    <string name="template_imap_server">imap.%1$s</string>
+    <string name="template_smtp_server">smtp.%1$s</string>
 </resources>
